Nambah dokumentasi. nambah chord aug dan dim. kok salah?

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-  <title>Ez Guitar Chord</title>
+  <title>Guitar Chord Variation</title>
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="bower_components/normalize-css/normalize.css">
   <link rel="stylesheet" href="bower_components/skeleton-framework/dist/skeleton.min.css">
@@ -18,13 +18,13 @@
         <small class="color-muted">Find your own chord variation and tell your friends.</small>
       </h3>
     </header>
-    <main id="ng-app">
+    <main>
       <form>
         <ChordRoot type="select">
           <options values="C C# D D# E F F# G G# A A# B"></options>
         </ChordRoot>
         <ChordVariation type="select">
-          <options values="maj maj7 7 min min7 sus"></options>
+          <options values="maj maj7 7 min min7 sus aug dim"></options>
         </ChordVariation>
         <ManualChord type="text"></ManualChord>
       </form>
