bisa ngedit tunning

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
           <options values="maj maj7 7 min min7 sus aug aug7 dim dim7"></options>
         </ChordVariation>
         <ManualChord type="text"></ManualChord>
+        <ManualTuning type="text"></ManualTuning>
       </form>
       <Guitar orientation="vertical">
         <Fret tune="E"></Fret>
