--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
         <ManualChord type="text"></ManualChord>
         <ManualTuning type="text"></ManualTuning>
       </form>
-      <Guitar orientation="vertical">
-        <Fret tune="E"></Fret>
-        <Fret tune="A"></Fret>
-        <Fret tune="D"></Fret>
-        <Fret tune="G"></Fret>
-        <Fret tune="B"></Fret>
-        <Fret tune="E"></Fret>
+      <Guitar orientation="vertical" frets="13">
+        <String tune="E"></String>
+        <String tune="A"></String>
+        <String tune="D"></String>
+        <String tune="G"></String>
+        <String tune="B"></String>
+        <String tune="E"></String>
       </Guitar>
     </main>
     <footer>
