pake font awesome lagi

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="bower_components/normalize-css/normalize.css">
   <link rel="stylesheet" href="bower_components/skeleton-framework/dist/skeleton.min.css">
+  <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="assets/css/app.css">
 </head>
 <body style="min-width: 200px; padding-top: 16px;">
@@ -42,7 +43,6 @@
       <br>
     </footer>
   </div>
-  <script src="assets/js/app.js"></script>
   <script src="dist/js/app2.js"></script>
 </body>
 </html>
