--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </h3>
     </header>
     <main>
-      <form>
+      <form action="auto">
         <ChordRoot type="select">
           <options values="C C# D D# E F F# G G# A A# B"></options>
         </ChordRoot>
