--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
     <footer>
       <br>
       <!-- github stars -->
-      <iframe class="github-btn" src="https://ghbtns.com/github-btn.html?user=rafgugi&amp;repo=ez-guitar-chord&amp;type=watch&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" width="80px" height="20px"></iframe>
+      <iframe class="github-btn" src="https://ghbtns.com/github-btn.html?user=rafgugi&amp;repo=guitar-chord-variation&amp;type=watch&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" width="80px" height="20px"></iframe>
       <!-- github clone -->
-      <iframe class="github-btn" src="https://ghbtns.com/github-btn.html?user=rafgugi&amp;repo=ez-guitar-chord&amp;type=fork&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" width="80px" height="20px"></iframe>
+      <iframe class="github-btn" src="https://ghbtns.com/github-btn.html?user=rafgugi&amp;repo=guitar-chord-variation&amp;type=fork&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" width="80px" height="20px"></iframe>
       <br>
     </footer>
   </div>
