--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
   <!-- icon generated from https://romannurik.github.io/AndroidAssetStudio/icons-launcher.html -->
   <link rel="icon" type="image/png" href="ss.png">
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
-  <link rel="stylesheet" href="bower_components/normalize-css/normalize.css">
-  <link rel="stylesheet" href="bower_components/skeleton-framework/dist/skeleton.min.css">
-  <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
-  <link rel="stylesheet" href="dist/css/app.css">
+  <link rel="stylesheet" href="/src/style.scss">
 </head>
 <body style="min-width: 200px; padding-top: 16px;">
   <div class="container">
@@ -55,6 +52,6 @@
       <br>
     </footer>
   </div>
-  <script src="dist/js/app2.js"></script>
+  <script type="module" src="/src/index.tsx"></script>
 </body>
 </html>
