--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </h3>
     </header>
     <main>
-      <form action="auto">
+      <form action="#dumb">
         <ChordRoot type="select">
           <options values="C C# D D# E F F# G G# A A# B"></options>
         </ChordRoot>
